version/2.0/ripscrip/2.3-shapes-and-fills.md
# 2.3 Shapes & Fills

[◀ Prev: 2.2 Curves](2.2-curves.md) · [Contents](README.md) · [Next: 3.0 Text Output & Fonts ▶](3.0-text-output-and-fonts.md)

Closed shapes - rectangles, bars, rounded rectangles, polygons - their filled variants, and the fill-style state: twelve stock patterns plus user-defined 8×8 patterns.

[Rectangles & bars](#rip_rectangle) · [Rounded rectangles](#rip_rounded_rect) · [Filled circles & ovals](#rip_filled_circle) · [Pie slices](#rip_pie_slice) · [Polygons & poly-beziers](#rip_polygon) · [Fill styles & patterns](#rip_fill_style) · [Borders](#rip_set_border) · [RIP_FILL - removed in 2.x](#rip_fill)

## RIP_RECTANGLE

_Draw a rectangle in current color/line style_

|               |                           |
| ------------- | ------------------------- |
| **Level**     | 0                         |
| **Command**   | `R`                       |
| **Arguments** | `x0:XY y0:XY x1:XY y1:XY` |

**Format:** `!|R <x0> <y0> <x1> <y1>` **Example:** `!|R00010A0E`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting)

This command draws a rectangle in the current drawing color, using the current line style, pattern and thickness. (x0,y0) and (x1,y1) are any two opposing corners of the rectangle. If x0=x1 or y0=y1 then the command will draw a single vertical or horizontal line. The rectangle interior is not filled by RIP_RECTANGLE.

## RIP_FILLED_RECTANGLE

_Added in RIPscrip v2.A2._

_Draw filled rectangle with fill style/line style_

|               |                           |
| ------------- | ------------------------- |
| **Level**     | 0                         |
| **Command**   | `K`                       |
| **Arguments** | `x0:XY y0:XY x1:XY y1:XY` |

**Format:** `!|K <x0> <y0> <x1> <y1>` **Example:** `!|K00010A0E`

**Attributes used:** Draw Color, Back Color, Line Style, Fill Style, Write Mode, Viewport, Port, Base Math (current setting)

This command draws a filled rectangle in the current drawing color, using the current line style, pattern and thickness, and the current fill style. (x0,y0) and (x1,y1) are any two opposing corners of the rectangle. If x0=x1 or y0=y1 then the command will draw a single vertical or horizontal line (or possibly a single pixel) (if borders are off, then this command draws nothing in this situation).

This command operates similarly to the [RIP_BAR](#rip_bar) command when borders are disabled, however the lower-left and lower-right edges of the filled rectangle obey the resolution independent method of performing fills (see the section called ["THE MATHEMATICS OF GRAPHICS AND COORDINATES"](1.2-math-and-coordinates.md#the-mathematics-of-graphics-and-coordinates) for details on how this works. _(v2.A3)_

Under that rule a filled interior fills _between_ the coordinate lines - one pixel short of the right and bottom border.

Before the rectangle is actually drawn, the (x0,y0) and (x1,y1) coordinates are "normalized". This means that they are adjusted so that they specify the upper-left and lower-right coordinates respectively. For example, if the parameters are received in the order of (50,25) and (25,75) - upper-right and lower-left respectively - they would be reorganized to be (25,25) and (50,75) before the rectangle is actually drawn. _(v2.A3)_

## RIP_BAR

_Draw filled rectangle using fill style/no border_

|               |                           |
| ------------- | ------------------------- |
| **Level**     | 0                         |
| **Command**   | `B`                       |
| **Arguments** | `x0:XY y0:XY x1:XY y1:XY` |

**Format:** `!|B <x0> <y0> <x1> <y1>` **Example:** `!|B00010A0E`

**Attributes used:** Back Color, Fill Style, Write Mode, Viewport, Port, Base Math (current setting)

This command fills a rectangular region with the current fill color and pattern. No border is drawn.

> **NOTE:** If the borders are enabled, then this command will still draw a rectangle with no border. This is the only RIPscrip command that ignores the border option. _(v2.A3)_

This command also does not adhere to the resolution independent method of performing fills. In other words, the fill actually goes to the very lower-left corner of the rectangle. In this manner, this command is not truly resolution independent. If you want to draw a resolution independent filled rectangle, use the [RIP_FILLED_RECTANGLE](#rip_filled_rectangle) with borders disabled. _(v2.A3)_

Before the rectangle is actually drawn, the (x0,y0) and (x1,y1) coordinates are "normalized". This means that they are adjusted so that they specify the upper-left and lower-right coordinates respectively. For example, if the parameters are received in the order of (50,25) and (25,75) - upper-right and lower-left respectively - they would be reorganized to be (25,25) and (50,75) before the rectangle is actually drawn. _(v2.A3)_

## RIP_ROUNDED_RECT

_Added in RIPscrip v2.A3._

_Draw a rectangle with rounded corners_

|               |                                 |
| ------------- | ------------------------------- |
| **Level**     | 0                               |
| **Command**   | `U`                             |
| **Arguments** | `x0:XY y0:XY x1:XY y1:XY rad:2` |

**Example:** `!|U00010A0E09`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting)

This command draws a rounded corner rectangle. The corners of the rectangle are not drawn at right angles like normal rectangles. The rounded rectangle has circular arcs drawn at all four corners of the drawn object. The radius of the arc that is used to fill-in the corners is specified in the `<rad>` parameter. The `<x0,y0>` and `<x1,y1>` parameters define the upper left and lower right corners of the rectangle as if the corners were actually specified as a normal rectangle. The circular arcs drawn in the corners of the rounded rectangle are truly circular in nature and adhere to aspect ratios relating to the actual video configuration of the destination application program.

## RIP_FILLED_ROUNDED_RECT

_Added in RIPscrip v2.A3._

_Draw a filled rectangle with rounded corners_

|               |                                 |
| ------------- | ------------------------------- |
| **Level**     | 0                               |
| **Command**   | `u`                             |
| **Arguments** | `x0:XY y0:XY x1:XY y1:XY rad:2` |

**Example:** `!|u00010A0E09`

**Attributes used:** Draw Color, Back Color, Line Style, Fill Style, Write Mode, Viewport, Port, Base Math (current setting)

This command draws a rounded corner rectangle which is filled in with the current fill pattern and fill color. The corners of the rectangle are not drawn at right angles like normal rectangles. The rounded rectangle has circular arcs drawn at all four corners of the drawn object. The radius of the arc that is used to fill-in the corners is specified in the `<rad>` parameter. The `<x0,y0>` and `<x1,y1>` parameters define the upper left and lower right corners of the rectangle as if the corners were actually specified as a normal rectangle. The circular arcs drawn in the corners of the rounded rectangle are truly circular in nature and adhere to aspect ratios relating to the actual video configuration of the destination application program.

If borders are enabled, then the outer portion of the rounded rectangle are drawn in the current line style, foreground pen color and line style. The border is drawn in "copy" mode - the border of this command (if any) is never drawn in any operation other than the COPY write mode.

## RIP_FILLED_CIRCLE

_Added in RIPscrip v2.A2._

_Draw a filled circle in current color/line style_

|               |                                     |
| ------------- | ----------------------------------- |
| **Level**     | 0                                   |
| **Command**   | `G`                                 |
| **Arguments** | `x_center:XY y_center:XY radius:XY` |

**Format:** `!|G <x_center> <y_center> <radius>` **Example:** `!|G1E180M`

**Attributes used:** Draw Color, Back Color, Line Style, Fill Style, Write Mode, Viewport, Port, Base Math (current setting)

This command draws a complete filled circle on the screen. The interior of the circle is drawn using the current fill pattern and fill color. The outline of the circle is drawn using the current drawing color and line thickness (if borders are enabled).

The radius is considered to be in the horizontal direction for the purpose of aspect ratio calculations. _(v2.A3)_

When borders are disabled, this command adheres to the resolution independent method of filled regions. _(v2.A3)_

## RIP_FILLED_OVAL

_Draw filled ellipse using current color/pattern_

|               |                                             |
| ------------- | ------------------------------------------- |
| **Level**     | 0                                           |
| **Command**   | `o`                                         |
| **Arguments** | `x_center:XY y_center:XY x_rad:XY y_rad:XY` |

**Format:** `!|o <x_center> <y_center> <x_rad> <y_rad>` **Example:** `!|o1G2B0M0G`

**Attributes used:** Draw Color, Back Color, Line Style, Fill Style, Write Mode, Viewport, Port, Base Math (current setting)

This command draws a complete filled ellipse on the screen. The interior of the ellipse is drawn using the current fill pattern and fill color. The outline of the ellipse is drawn using the current drawing color and line thickness.

When borders are disabled, this command adheres to the resolution independent method of filled regions. _(v2.A3)_

## RIP_PIE_SLICE

_Draws a circular pie slice_

|               |                                             |
| ------------- | ------------------------------------------- |
| **Level**     | 0                                           |
| **Command**   | `I`                                         |
| **Arguments** | `x:XY y:XY start_ang:2 end_ang:2 radius:XY` |

**Format:** `!|I <x> <y> <start_ang> <end_ang> <radius>` **Example:** `!|I1E18003G15`

**Attributes used:** Draw Color, Back Color, Line Style, Fill Style, Write Mode, Viewport, Port, Base Math (current setting)

This command draws a "pie slice". The slice is circular. It obeys all of the same commands as the Arc command described above. The ends of the arc are connected to the Center-Point of the Arc with two straight lines. These two lines converge at the Center-Point. The interior of the Slice is filled with the current Fill Color and Pattern. The exterior (outline) of the Slice is drawn using the current drawing color and line thickness. The Line Pattern feature does not apply to this command.

Both angles can be greater than 360 degrees. The starting angle must be greater or equal to the ending angle. _(v2.A3)_

The radius is considered to be in the horizontal direction for the purpose of aspect ratio calculations. _(v2.A3)_

When borders are disabled, this command adheres to the resolution independent method of filling regions. _(v2.A3)_

## RIP_OVAL_PIE_SLICE

_Draws an elliptical pie slice_

|               |                                              |
| ------------- | -------------------------------------------- |
| **Level**     | 0                                            |
| **Command**   | `i`                                          |
| **Arguments** | `x:XY y:XY st_ang:2 e_ang:2 radx:XY rady:XY` |

**Format:** `!|i <x> <y> <st_ang> <e_ang> <radx> <rady>` **Example:** `!|i1E18003G151Q`

**Attributes used:** Draw Color, Back Color, Line Style, Fill Style, Write Mode, Viewport, Port, Base Math (current setting)

This command draws an "elliptical pie slice". It obeys all of the same commands as the Elliptical Arc command described above. The ends of the arc are connected to the Center-Point of the Arc with two straight lines. These two lines converge at the Center-Point. The interior of the Slice is filled with the current Fill Color and Pattern. The exterior (outline) of the Slice is drawn using the current drawing color and line thickness. The Line Pattern feature does not apply to this command.

Both angles can be greater than 360 degrees. The starting angle must be greater or equal to the ending angle. _(v2.A3)_

When borders are disabled, this command adheres to the resolution independent method of filling regions. _(v2.A3)_

## RIP_POLYGON

_Draw polygon in current color/line-style_

|               |                                         |
| ------------- | --------------------------------------- |
| **Level**     | 0                                       |
| **Command**   | `P`                                     |
| **Arguments** | `npoints:2 x1:XY y1:XY ... xn:XY yn:XY` |

**Format:** `!|P <npoints> <x1> <y1> ... <xn> <yn>` **Example:** `!|P03010105090905`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting)

This command will draw a multi-sided closed polygon. The polygon is drawn using the current drawing color, line pattern, thickness and raster operation (write mode). The `<npoints>` parameter is between 2 and 512 and indicates how many (x,y) coordinate pairs will follow, which is also the number of sides of the polygon. The polygon interior is not filled by RIP_POLYGON.

The polygon is enclosed by the last vertex between xn,yn and x1,y1. In other words, you do not have to connect the end to the beginning - it is automatically done for you.

## RIP_FILLED_POLYGON

_Formerly RIP_FILL_POLYGON._

_Draw filled polygon in current color/fill pattern_

|               |                                         |
| ------------- | --------------------------------------- |
| **Level**     | 0                                       |
| **Command**   | `p`                                     |
| **Arguments** | `npoints:2 x1:XY y1:XY ... xn:XY yn:XY` |

**Format:** `!|p <npoints> <x1> <y1> ... <xn> <yn>` **Example:** `!|p03010105050909`

**Attributes used:** Draw Color, Back Color, Line Style, Fill Style, Write Mode, Viewport, Port, Base Math (current setting)

This command is identical to [RIP_POLYGON](#rip_polygon), except that the interior of the polygon is filled with the current fill color and fill pattern. The actual outline of the polygon is drawn using the current drawing color, line pattern and thickness.

> **NOTE:** You will get unusual effects if the lines of the polygon overlap, creating a polygon with internal "gaps". (The rule is this: regions that are "inside" the polygon an even number of times due to overlap are NOT filled.) The interior fill does utilize Write Mode, but the outline of the polygon does not.

## RIP_FILLED_POLY_BEZIER

_Added in RIPscrip v2.A2._

_Draw a poly-bezier curve (multi-segmented)_

|  |  |
| --- | --- |
| **Level** | 0 |
| **Command** | `x` |
| **Arguments** | `num:2 count:2 x_base:XY y_base:XY ... type:1 x1:XY y1:XY x2:XY y2:XY x3:XY y3:XY ... type:1 x1:XY y1:XY ...` |

**Format:** `!|x <num> <count> <x_base> <y_base> ... <type> <x1> <y1> <x2> <y2> <x3> <y3> ... <type> <x1> <y1> ...` **Example:** `!|x`

_See [ERRATA.md](ERRATA.md#rip_filled_poly_bezier-command-x-not-z) for why this command is `x` rather than the ALPHA 4 draft's `z`._

**Attributes used:** Draw Color, Back Color, Line Style, Fill Style, Write Mode, Viewport, Port, Base Math (current setting)

This command is identical to [RIP_POLY_BEZIER](2.2-curves.md#rip_poly_bezier), except that the interior of the poly-bezier is filled with the current fill color and fill pattern. The actual outline of the poly-bezier is drawn using the current drawing color, line pattern and thickness.

> **NOTE:** You will get unusual effects if the lines of the poly-bezier overlap, creating a poly-bezier with internal "gaps". (The rule is this: regions that are "inside" the poly-bezier an even number of times due to overlap are NOT filled.) The interior fill does utilize Write Mode, but the outline of the the poly-bezier does not.

When borders are disabled, then the filled interior of the poly-bezier curve adheres to the resolution independent nature of filled regions. _(v2.A3)_

## RIP_FILL_STYLE

_Set current fill style (predefined) & fill color_

|               |                      |
| ------------- | -------------------- |
| **Level**     | 0                    |
| **Command**   | `S`                  |
| **Arguments** | `pattern:2 color:CM` |

**Format:** `!|S <pattern> <color>` **Example:** `!|S05000F`

**Attributes used:** Fill Style, Base Math (current setting)

This command defines the current fill pattern and fill color for use in subsequent graphics fill operations. There are twelve (12) predefined fill patterns. They are:

| Pattern | Description                | Example       | Misc          |
| ------- | -------------------------- | ------------- | ------------- |
| 00      | Fill with background color |               | (color #0)    |
| 01      | Solid Fill                 | `███████████` | (fill color)  |
| 02      | Line Fill                  | `-----------` | (thick lines) |
| 03      | Light Slash Fill           | `/  /  /  /`  | (thin lines)  |
| 04      | Normal Slash Fill          | `// // // //` | (thick lines) |
| 05      | Normal Backslash Fill      | `\\ \\ \\ \\` | (thick lines) |
| 06      | Light Backslash Fill       | `\  \  \  \`  | (thin lines)  |
| 07      | Light Hatch Fill           | `###########` | (thin lines)  |
| 08      | Heavy Cross Hatch Fill     | `XXXXXXXXXXX` | (thin lines)  |
| 09      | Interleaving Line Fill     | `+-+-+-+-+-+` | (thin lines)  |
| 0A      | Widely spaced dot fill     | `. : . : . :` | (pixels only) |
| 0B      | Closely spaced dot fill    | `:::::::::::` | (pixels only) |

The `<color>` parameter is the fill color for subsequent fill commands. The "active" pixels of the pattern become this color. The "inactive" pixels become the current pen background color. Fill pattern 00 will set the entire fill area to the background color. (In this case, the fill color doesn't matter).

The `<color>` parameter of this command serves two purposes depending on what Color Mode is currently set. The default mode, Color Map mode, signifies that the color parameter of this command will use the parameter as an index into the 256 color Drawing Palette color mapping table. In this mode, this parameter will use the current Base Math set by the global [RIP_SET_BASE_MATH](1.2-math-and-coordinates.md#rip_set_base_math) command. _(v2.A0)_

In Direct RGB Color Mode, the color parameter will be a four-digit UltraNum (regardless of the current Base Math setting). This numeric value will be an encoded RGB value, allowing you to set arbitrary RGB colors directly with the Fill Style commands. If the RGB color is not permissable, the closest match from the Color Map table will be located and used. The number of bits of precision used in the encoded RGB value will be determined by the [RIP_SET_COLOR_MODE](2.0-color-modes-and-palettes.md#rip_set_color_mode) command. _(v2.A0)_

When Color Mapping Mode is in use, the color parameter may be shorter than four digits. This is for space savings, as it is allowable in the specification for the last numeric parameter in a parameter list to be "shorter" than the full length. _(v2.A0)_

This command does not affect whether borders are enabled or disabled. See [RIP_SET_BORDER](#rip_set_border) command for details on how to alter the status of borders. _(v2.A3)_

### Fill Pattern Bitmaps

The following twelve diagrams show visually what each fill pattern appears like. Next to each diagram are the eight numerical values which represent the monochrome bit-pattern of each line of each pattern. Numbers are shown in Hexadecimal (base 16), decimal (base 10) and MegaNum (base 36): _(v1.54)_

```text
   BACKGROUND FILL                      SOLID FILL

╔════════╗  HEX DEC MEGA ULTRA   ╔════════╗  HEX DEC MEGA ULTRA
║        ║  00    0  00   00     ║████████║  FF  255  73   3@
║        ║  00    0  00   00     ║████████║  FF  255  73   3@
║        ║  00    0  00   00     ║████████║  FF  255  73   3@
║        ║  00    0  00   00     ║████████║  FF  255  73   3@
║        ║  00    0  00   00     ║████████║  FF  255  73   3@
║        ║  00    0  00   00     ║████████║  FF  255  73   3@
║        ║  00    0  00   00     ║████████║  FF  255  73   3@
║        ║  00    0  00   00     ║████████║  FF  255  73   3@
╚════════╝                       ╚════════╝
    00                               01


       LINE FILL                     LIGHT SLASH FILL

╔════════╗  HEX DEC MEGA ULTRA   ╔════════╗  HEX DEC MEGA ULTRA
║████████║  FF  255  73   3@     ║       █║  01    1  01   01
║████████║  FF  255  73   3@     ║      █ ║  02    2  02   02
║        ║  00    0  00   00     ║     █  ║  04    4  04   04
║        ║  00    0  00   00     ║    █   ║  08    8  08   08
║████████║  FF  255  73   3@     ║   █    ║  10   16  0G   0G
║████████║  FF  255  73   3@     ║  █     ║  20   32  0W   0W
║        ║  00    0  00   00     ║ █      ║  40   64  1S   10
║        ║  00    0  00   00     ║█       ║  80  128  3K   20
╚════════╝                       ╚════════╝
    02                               03


    NORMAL SLASH FILL               LIGHT BACKSLASH FILL

╔════════╗  HEX DEC MEGA ULTRA   ╔════════╗  HEX DEC MEGA ULTRA
║███     ║  E0  224  68   3W     ║████    ║  F0  240  60   3m
║██     █║  C1  193  5D   31     ║ ████   ║  78  120  3C   1u
║█     ██║  83  131  3N   23     ║  ████  ║  3C   60  1O   0y
║     ███║  07    7  07   07     ║   ████ ║  1E   30  0U   0U
║    ███ ║  0E   15  0F   0F     ║    ████║  0F   15  0F   0F
║   ███  ║  1C   28  0S   0S     ║█    ███║  87  135  3R   27
║  ███   ║  38   56  1K   0u     ║██    ██║  C3  195  5F   33
║ ███    ║  70  112  34   1m     ║███    █║  E1  225  69   3X
╚════════╝                       ╚════════╝
    04                               05


  LIGHT BACKSLASH FILL               LIGHT HATCH FILL

╔════════╗  HEX DEC MEGA ULTRA   ╔════════╗  HEX DEC MEGA ULTRA
║█ █  █ █║  A5  165  4L   2b     ║████████║  FF  255  73   3@
║██ █  █ ║  D2  210  5U   3I     ║█   █   ║  88  136  3S   28
║ ██ █  █║  69  105  2X   1f     ║█   █   ║  88  136  3S   28
║█ ██ █  ║  B4  180  50   2q     ║█   █   ║  88  136  3S   28
║ █ ██ █ ║  5A   90  2I   1Q     ║████████║  FF  255  73   32
║  █ ██ █║  2D   45  19   0j     ║█   █   ║  88  136  3S   28
║█  █ ██ ║  96  150  46   2M     ║█   █   ║  88  136  3S   28
║ █  █ ██║  4B   75  23   1B     ║█   █   ║  88  136  3S   28
╚════════╝                       ╚════════╝
    06                               07


 HEAVY CROSS HATCH FILL           INTERLEAVING LINE FILL

╔════════╗  HEX DEC MEGA ULTRA   ╔════════╗  HEX DEC MEGA ULTRA
║█      █║  81  129  3L   21     ║██  ██  ║  CC  204  5O   3C
║ █    █ ║  42   66  1U   12     ║  ██  ██║  33   51  1F   0p
║  █  █  ║  24   36  10   0a     ║██  ██  ║  CC  204  5O   3C
║   ██   ║  18   24  0O   0O     ║  ██  ██║  33   51  1F   0p
║   ██   ║  18   24  0O   0O     ║██  ██  ║  CC  204  5O   3C
║  █  █  ║  24   36  10   0a     ║  ██  ██║  33   51  1F   0p
║ █    █ ║  42   66  1U   12     ║██  ██  ║  CC  204  5O   3C
║█      █║  81  129  3L   21     ║  ██  ██║  33   51  1F   0p
╚════════╝                       ╚════════╝
    08                               09


 WIDELY SPACED DOT FILL           CLOSELY SPACED DOT FILL

╔════════╗  HEX DEC MEGA ULTRA   ╔════════╗  HEX DEC MEGA ULTRA
║█       ║  80  128  3K   20     ║█   █   ║  88  136  3S   28
║        ║  00    0  00   00     ║        ║  00    0  00   00
║    █   ║  08    8  08   08     ║  █   █ ║  22   34  0Y   04
║        ║  00    0  00   00     ║        ║  00    0  00   00
║█       ║  80  128  3K   20     ║█   █   ║  88  136  3S   28
║        ║  00    0  00   00     ║        ║  00    0  00   00
║    █   ║  08    8  08   08     ║  █   █ ║  22   34  0Y   24
║        ║  00    0  00   00     ║        ║  00    0  00   00
╚════════╝                       ╚════════╝
    0A                               0B
```

## RIP_FILL_PATTERN

_Set user-definable (custom) fill pattern/color_

|               |                                                  |
| ------------- | ------------------------------------------------ |
| **Level**     | 0                                                |
| **Command**   | `s`                                              |
| **Arguments** | `c1:2 c2:2 c3:2 c4:2 c5:2 c6:2 c7:2 c8:2 col:CM` |

**Format:** `!|s <c1> <c2> <c3> <c4> <c5> <c6> <c7> <c8> <col>` **Example:** `!|s11223344556677880F`

**Attributes used:** Fill Style, Base Math (current setting)

This command allows you to specify a user-defined, custom Fill Pattern. This pattern supersedes the predefined patterns of [RIP_FILL_STYLE](#rip_fill_style). A custom fill pattern is an 8x8 pixel array defining which pixels should be drawn in the current fill color (as set by the `<col>` parameter here). The other pixels in the fill area are set to the current pen background color.

Each of the eight parameters of this command, `<c1>` through `<c8>` represent bit-patterns for a line of the 8x8 pixel array. Each line is comprised of 8 pixels. The value of each parameter is the binary representation of these 8 pixels as follows:

| Bit | 7   | 6   | 5   | 4   | 3   | 2   | 1   | 0   |
| --- | --- | --- | --- | --- | --- | --- | --- | --- |
| c1  | 128 | 64  | 32  | 16  | 8   | 4   | 2   | 1   |
| c2  | 128 | 64  | 32  | 16  | 8   | 4   | 2   | 1   |
| c3  | 128 | 64  | 32  | 16  | 8   | 4   | 2   | 1   |
| c4  | 128 | 64  | 32  | 16  | 8   | 4   | 2   | 1   |
| c5  | 128 | 64  | 32  | 16  | 8   | 4   | 2   | 1   |
| c6  | 128 | 64  | 32  | 16  | 8   | 4   | 2   | 1   |
| c7  | 128 | 64  | 32  | 16  | 8   | 4   | 2   | 1   |
| c8  | 128 | 64  | 32  | 16  | 8   | 4   | 2   | 1   |

So, c1 is the top, and the most-significant bit is to the left.

The `<col>` parameter of this command serves two purposes depending on what Color Mode is currently set. The default mode, Color Map mode, signifies that the color parameter of this command will use the parameter as an index into the 256 color Drawing Palette color mapping table. In this mode, this parameter will use the current Base Math set by the global [RIP_SET_BASE_MATH](1.2-math-and-coordinates.md#rip_set_base_math) command. _(v2.A0)_

In Direct RGB Color Mode, the color parameter will be a four-digit UltraNum (regardless of the current Base Math setting). This numeric value will be an encoded RGB value, allowing you to set arbitrary RGB colors directly with the Set Color commands. If the RGB color is not permissable, the closest match from the Color Map table will be located and used. The number of bits of precision used in the encoded RGB value will be determined by the [RIP_SET_COLOR_MODE](2.0-color-modes-and-palettes.md#rip_set_color_mode) command. _(v2.A0)_

When Color Mapping Mode is in use, the color parameter may be shorter than four digits. This is for space savings, as it is allowable in the specification for the last numeric parameter in a parameter list to be "shorter" than the full length. _(v2.A0)_

This command does not affect whether borders are enabled or disabled. See [RIP_SET_BORDER](#rip_set_border) command for details on how to alter the status of borders. _(v2.A3)_

> **NOTE:** The RIP_FILL_STYLE (predefined fill patterns) and this RIP_FILL_PATTERN (custom fill patterns) completely override each other's effects.

## RIP_SET_BORDER

_Added in RIPscrip v2.A3._

_Enable or disable borders on filled objects_

|               |             |
| ------------- | ----------- |
| **Level**     | 0           |
| **Command**   | `N`         |
| **Arguments** | `borders:2` |

**Format:** `!|N <borders>` **Example:** `!|N01`

**Attributes used:** Base Math (current setting)

This command specifies whether borders are drawn with filled objects (eg, [RIP_FILLED_RECTANGLE](#rip_filled_rectangle), etc). This command does not affect the command [RIP_BAR](#rip_bar). When borders are enabled, the following commands will draw a border around the filled region:

- RIP_FILLED_RECTANGLE
- [RIP_FILLED_CIRCLE](#rip_filled_circle)
- [RIP_FILLED_OVAL](#rip_filled_oval)
- [RIP_PIE_SLICE](#rip_pie_slice)
- [RIP_OVAL_PIE_SLICE](#rip_oval_pie_slice)
- [RIP_FILLED_POLYGON](#rip_filled_polygon)
- [RIP_FILLED_POLY_BEZIER](#rip_filled_poly_bezier)
- [RIP_FILLED_ROUNDED_RECT](#rip_filled_rounded_rect)

Borders drawn around the filled regions are always drawn in the write mode COPY (this is to avoid strange pixel interactions in XOR, OR, AND and NOT modes when they interact with the filled-pixels behind them. The borders are drawn using the current line thickness. The polygon related command also adheres to line patterns; all other commands only use the line thickness. The filled regions are initially drawn using the resolution independent methods of filling. After that, the border is drawn based on standard methodologies. For more details, see the section entitled ["THE MATHEMATICS OF GRAPHICS AND COORDINATES"](1.2-math-and-coordinates.md#the-mathematics-of-graphics-and-coordinates) for a more detailed explanation of these issues.

Setting the `<border>` parameter to "01" enables borders around filled objects. A value of "00" indicates that borders are disabled.

When a [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows) or a [RIP_HEADER](1.1-protocol-and-command-hierarchy.md#rip_header) command is executed (where the environment is reset), borders are automatically enabled for backwards compatibility.

## RIP_FILL

_This command is no longer supported._

_Flood fill screen area with current fill settings_

|             |     |
| ----------- | --- |
| **Level**   | 0   |
| **Command** | `F` |

This command has been removed from the RIPscrip language. Due to the numerous issues trying to make it work reliably at all resolutions, it was decided that this command could not be implemented without compromising the integrity of the scene. Also, fills work differently under Windows, OS/2, Macintosh, Amiga, and DOS. With all of the complexities involved, having a reliable fill operation cannot be achieved under multiple resolutions and platforms. _(v2.A2)_

_See [ERRATA.md](ERRATA.md#rip_fill-removed-and-never-reliable) for the evidence behind the removal and the command's unreliability in the 1.5x era._

There are a number of alternatives to using a flood fill. In fact, a large number of screens could have been drawn much more efficiently using the filled object commands listed below, than using a fill. _(v2.A2)_

| Basic Drawing Objects | Filled Equivalent: |
| --- | --- |
| [RIP_PIXEL](2.1-lines.md#rip_pixel) | N/A |
| [RIP_LINE](2.1-lines.md#rip_line) | N/A |
| [RIP_RECTANGLE](#rip_rectangle) | [RIP_FILLED_RECTANGLE](#rip_filled_rectangle) |
| N/A | [RIP_BAR](#rip_bar) |
| [RIP_CIRCLE](2.2-curves.md#rip_circle) | [RIP_FILLED_CIRCLE](#rip_filled_circle) |
| [RIP_OVAL](2.2-curves.md#rip_oval) | [RIP_FILLED_OVAL](#rip_filled_oval) |
| [RIP_ARC](2.2-curves.md#rip_arc) | [RIP_PIE_SLICE](#rip_pie_slice) |
| [RIP_OVAL_ARC](2.2-curves.md#rip_oval_arc) | [RIP_OVAL_PIE_SLICE](#rip_oval_pie_slice) |
| [RIP_POLYGON](#rip_polygon) | [RIP_FILLED_POLYGON](#rip_filled_polygon) |
| [RIP_POLYLINE](2.1-lines.md#rip_polyline) | N/A |
| [RIP_BEZIER](2.2-curves.md#rip_bezier) | N/A |
| [RIP_POLY_BEZIER](2.2-curves.md#rip_poly_bezier) | [RIP_FILLED_POLY_BEZIER](#rip_filled_poly_bezier) |
| [RIP_POLY_BEZIER_LINE](2.2-curves.md#rip_poly_bezier_line) | N/A |
| [RIP_ROUNDED_RECT](#rip_rounded_rect) | [RIP_FILLED_ROUNDED_RECT](#rip_filled_rounded_rect) |

The removed command's original definition (arguments `x:2, y:2, border:2`, oozing fill bounded by a border color) is preserved in [the v1.54 reference](../../1.54/ripscrip/2.3-shapes-and-fills.md#rip_fill).

---

[◀ Prev: 2.2 Curves](2.2-curves.md) · [Contents](README.md) · [Next: 3.0 Text Output & Fonts ▶](3.0-text-output-and-fonts.md)
